chore(SHS-6346): use correct size for thumnail when image style is full (default) and it's aligned to left/right

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/ckeditor/_imports.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/ckeditor/_imports.scss
@@ -131,7 +131,7 @@
     .hb-video-lazy__thumb img {
       margin: 0 auto;
 
-      .full & {
+      .full:not(.align-left):not(.align-right) & {
         width: 100%;
       }
     }
