--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_media.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_media.scss
@@ -56,7 +56,7 @@
   .hb-video-lazy__thumb img {
     margin: 0 auto;
 
-    .full & {
+    .full:not(.align-left):not(.align-right) & {
       width: 100%;
     }
   }
